# web-book-reader

./: .swcrc  .yarnrc.yml  bun.lockb  package-lock.json  package.json  tsconfig.json  vite.config.ts
.storybook/: main.ts  preview.ts
src/: DebugMenu.tsx  ErrorPage.tsx  Errors.tsx  Global.css  History.ts  Home.tsx  Types.ts  canGoBack.ts  main.tsx  routeTree.gen.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs  migrations.rs
src-tauri/src/mac/: window.rs
src/bookSource/: BookSource.Service.tsx  BookSource.ts  RateLimiter.tsx  RoyalRoadApi.tsx  RoyalRoadBookSource.ts
src/discover/: RoyalRoadApi.tsx
src/downloader/: DownloadList.tsx  Downloader.context.tsx
src/reader/: ChapterCache.tsx  PageSplitter.tsx  PageSplitter.types.ts  PagedReaderView.tsx  ReaderPage.loader.tsx  ReaderPage.tsx  ReaderSettings.defaults.tsx  ReaderSettings.types.tsx
src/routes/: __root.tsx  _layout.books.tsx  _layout.discover.index.tsx  _layout.discover.royalroad.$.tsx  _layout.search.tsx  _layout.settings.tsx  _layout.tsx  books.$bookID.tsx  books.tsx  discover.index.tsx  discover.royalroad.$.tsx  discover.royalroad.chapter_.$.tsx  discover.tsx  index.tsx  settings.tsx
src/search/: Search.Context.tsx
src/storage/: Database.types.ts  DatabaseClient.ts  MockDatabaseClient.ts  ReaderSettings.tsx
src/ui/: BookCover.Loader.tsx  BookCover.tsx  BookGrid.Loader.tsx  BookGrid.stories.tsx  BookGrid.tsx  Button.tsx  Colors.ts  ContentContainer.tsx  DateTime.tsx  DetailRow.tsx  ErrorHandler.tsx  HtmlContent.Loader.tsx  HtmlContent.contentStyles.ts  HtmlContent.sanitizeHtml.ts  HtmlContent.tsx  MobileNavBar.tsx  NavBar.Context.tsx  NavBar.tsx  Offscreen.tsx  Separator.tsx  SkeletonContext.tsx  SmartLink.tsx  Tags.tsx  TitleBar.tsx  useClampText.tsx
src/ui/reader/: ReaderSettings.defaults.tsx
