[package]
name = "web-book-reader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "web_book_reader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.8", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.10", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta.2"
tauri-plugin-window-state = "2.0.0-beta.2"
tauri-plugin-http = "2.0.0-beta.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex_color = "3.0.0"
reqwest = "0.11.26"
tauri-plugin-log = { version = "2.0.0-beta.2", features = ["colored"] }
log = "^0.4"
tauri-plugin-process = "2.0.0-beta.2"
window-vibrancy = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0-beta.2"
